Fix failing tests, address code style violations.